// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  border-left: 4px solid #cccccc;
  padding: 1.5rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Blockquote"
>
  Hello world
</p>
`;

exports[`composition hook should return with Blockquote props 1`] = `
Object {
  "className": "css-hqv8z2 css-1pwrqjj css-3ekj6a fp-Box fp-Blockquote",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Blockquote"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Blockquote"
>
  hello world
</blockquote>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Blockquote"
>
  Hello world
</blockquote>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  border-color: #3722ed !important;
}

<blockquote
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Blockquote"
>
  Hello world
</blockquote>
`;
